give div fixed position, prevent overlap

--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -6,3 +6,8 @@ div#api-search-locations-checkin{
 	float:left;
 	width:35%;
 }
+
+.new-location-form-checkin{
+  position: fixed;
+  left: 50%;
+}
